- Methods to statically set the server host name attribute on server spans have been removed, as static data is better represented as a resource.
** The function `add-server-name!` has been removed.
** The option `:server-name` has been removed from the middleware and interceptors for server span support.
- Bump deps:
* OpenTelemetry `1.19.0`
** Module `clj-otel-sdk-extension-resources` renamed to `clj-otel-instrumentation-resources`
* gRPC `1.50.0`
* Various build deps

=== `0.1.5` (2022-09-03)

- Bump deps:
* OpenTelemetry `1.17.0`
* gRPC `1.49.0`
* Various build deps

=== `0.1.4` (2022-07-05)

- Add support for including https://opentelemetry.io/docs/reference/specification/trace/semantic_conventions/span-general/#source-code-attributes[source code semantic attributes] when creating spans.
By default, attributes identifying the namespace, line number and source file path are included in spans created by `with-span!`, `with-span-binding`, and `async-span`.
- Update Pedestal HTTP server span support to always add route data to server spans
- Bump deps:
* OpenTelemetry `1.15.0`
** Modules `clj-otel-exporter-otlp-*` are merged to new module `clj-otel-exporter-otlp`
* gRPC `1.47.0`
* Various build deps

=== `0.1.3` (2022-05-22)

- Bump deps:
* OpenTelemetry `1.14.0`
* gRPC `1.46.0`
* Various build deps

=== `0.1.2` (2022-04-13)

- Include `ExceptionInfo` data as attributes in exception span events, by default
- Update examples to use namespaced attributes for spans and events
- Bump deps:
* OpenTelemetry `1.13.0`
** The default value for autoconfiguration property `otel.metrics.exporter` has changed from `none` to `otlp`
* Clojure `1.11.1`
* gRPC `1.45.1`
* Various build deps

=== `0.1.1` (2022-03-13)

- Bump deps:
* OpenTelemetry `1.12.0`
* gRPC `1.45.0`
* Various build deps

=== `0.1.0` (2022-02-27)

- Initial release