@@ -1,8 +1,8 @@
-= `clj-otel-sdk-extension-aws`
+= `clj-otel-contrib-aws-resources`
 
-image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-sdk-extension-aws?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-sdk-extension-aws]
+image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-contrib-aws-resources?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-contrib-aws-resources]
 ifndef::env-cljdoc[]
-image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-sdk-extension-aws[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-sdk-extension-aws]
+image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-contrib-aws-resources[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-contrib-aws-resources]
 endif::[]
 image:https://img.shields.io/github/license/steffan-westcott/clj-otel[License]
 image:https://img.shields.io/badge/clojurians-clj--otel-blue.svg?logo=slack[Slack channel,link=https://clojurians.slack.com/messages/clj-otel]
