@@ -49,26 +49,12 @@ Provide access to OpenTelemetry metrics instrumentation of the JVM runtime.
 
 These are optional modules used with `clj-otel-sdk` for xref:guides.adoc#_run_with_programmatically_configured_sdk[programmatic configuration of the OpenTelemetry SDK in Clojure].
 
-=== `clj-otel-instrumentation-resources`
+=== `clj-otel-contrib-aws-resources`
 
-image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-instrumentation-resources?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-instrumentation-resources]
-image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-instrumentation-resources[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-instrumentation-resources/CURRENT]
-
-Provides access to `Resource` objects which describe the local host and running process.
-
-=== `clj-otel-sdk-extension-aws`
-
-image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-sdk-extension-aws?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-sdk-extension-aws]
-image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-sdk-extension-aws[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-sdk-extension-aws/CURRENT]
+image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-contrib-aws-resources?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-contrib-aws-resources]
+image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-contrib-aws-resources[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-contrib-aws-resources/CURRENT]
 
 Provides access to `Resource` objects which describe the execution environment on the Amazon Web Services (AWS) platform.
-
-=== `clj-otel-sdk-extension-jaeger-remote-sampler`
-
-image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler]
-image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler/CURRENT]
-
-Provides access to a `Sampler` that implements the Jaeger remote sampler type.
 
 === `clj-otel-extension-aws`
 
@@ -87,6 +73,20 @@ Provides access to `TextMapPropagator` implementations of these protocols:
 * OpenTracing Basic Tracers protocol
 * Jaeger propagation protocol
 * B3 propagation protocol
+
+=== `clj-otel-instrumentation-resources`
+
+image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-instrumentation-resources?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-instrumentation-resources]
+image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-instrumentation-resources[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-instrumentation-resources/CURRENT]
+
+Provides access to `Resource` objects which describe the local host and running process.
+
+=== `clj-otel-sdk-extension-jaeger-remote-sampler`
+
+image:https://img.shields.io/clojars/v/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler?logo=clojure&logoColor=white[Clojars,link=https://clojars.org/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler]
+image:https://cljdoc.org/badge/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler[cljdoc,link=https://cljdoc.org/d/com.github.steffan-westcott/clj-otel-sdk-extension-jaeger-remote-sampler/CURRENT]
+
+Provides access to a `Sampler` that implements the Jaeger remote sampler type.
 
 [#_exporter_libraries_and_modules]
 == Exporter libraries and modules
